frontend/src/components/Scratch/renderTabs.module.scss
.context {
    display: flex;
    flex-direction: column;
}

.editor {
    height: 100%;
}

.diffTab {
    display: flex;
    overflow: auto;
}

.about {
    padding: 16px;
    max-width: 500px;
    overflow: auto;
}

.compilerOptsTab {
    overflow: auto;
}

.compilerOptsContainer {
    min-width: 400px;
}

